* (bug 29745) Fatal error in API search
* (bug 29476) API returns page title instead of sectiontitle for
  srprop=sectiontitle
* Correct the documentation of srprop properties
* (bug 28817) Add reference help page link to API Modules
* (bug 29935) Improve formatting of examples in ApiParamInfo
* (bug 29938) list=users&usprop=rights shows rights the user doesn't have

=== Languages updated in 1.18 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

* Angika (anp) (new).
* Brahui (brh) (new).
* Central Dusun (new).
* Jamaican Creole English (jam) (new).
* Khowar (khw) (new).
* Liv (liv) (new).
* Kichwa (qug) (new).
* Tokipona (tp) (removed) 'tokipona' is still  valid.
* (bug 17160) Gender specific display text for User namespace.
* Link trail added for sl and sh.
* (bug 27633) Add characters to linkTrail for Portuguese (pt and pt-br).
* (bug 27426) Set $namespaceGenderAliases for Arabic (ar).
* (bug 27385) Set Polish $namespaceGenderAliases.
* (bug 27681) Set $namespaceGenderAliases for Portuguese (pt and pt-br).
* (bug 27785) Fallback language for Kabardian (kbd) is English now.
* (bug 27825) Raw watchlist edit message now uses formatted numbers.
* (bug 28040) Turkish: properly lower case 'I' to 'ı' (dotless i) and
  uppercase 'i' to 'İ' (dotted i).
* Conversion script between Syllabics and Latin for the Inuktitut language.
* Date formats for Indonesian (id) updated.
* Bhojpuri (bho) (renamed from "bh").
* (bug 29031) When translating block log entries, indefinite, infinite, and
  infinity are now considered the same.
* Aromanian (rup) (renamed from "rua-rup").
* Kashmiri (ks) split into Kashmiri (Perso-Arabic) (ks-arab) and Kashmiri
  (Devanagari) (ks-deva). Defaults to ks-arab.
* (bug 30864) Use bengali numerals for <ol> for Assamese
* (bug 30817) Restored linktrail for kk (Kazakh)